feat(guild): remove and and guild
